# rust-cli-template

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  dist-workspace.toml  release.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
tests/: test_cli.rs
